tests/fail/index.us
fn main() {
    let a = 10;
    a[10];
}